--- a/assets/index.html
+++ b/assets/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <script src="./js/dom-to-image.js" type="text/javascript"></script>
-    <script src="./js/client.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="stylesheets/style.css">
+    <script src="/js/index.bundle.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
+    <div id="root"></div>
   </body>
 </html>
