--- a/assets/index.html
+++ b/assets/index.html
@@ -3,6 +3,13 @@
     <meta charset="UTF-8">
     <script src="/js/index.bundle.js" type="text/javascript"></script>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-9253773921965392",
+        enable_page_level_ads: true
+      });
+    </script>
   </head>
   <body>
     <div id="root"></div>
